# v2ex-tui

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  TESTING.md  TODO.md  extract_nodes.py  extract_nodes.sh  flake.nix  generate_nodes_rs.py  nodes.json  shell.nix
.github/workflows/: ci.yml
config/: default.lisp
docs/: architecture.md  config-system.md  keymap-system.md  lisp-api.md  migration-guide.md  sov2ex-search-design.md
docs/examples/: advanced-config.lisp  basic-config.lisp
scripts/: extract_nodes.py  generate_nodes_rs.py  nodes.json
src/: api.rs  app.rs  browser.rs  cli.rs  cli_output.rs  clipboard.rs  event.rs  keymap.rs  main.rs  nodes.rs  state.rs  terminal.rs  ui.rs
src/config/: engine.rs  loader.rs  mod.rs
src/keymap/: actions.rs  handler.rs  mod.rs  registry.rs
src/util/: mod.rs
src/views/: aggregate.rs  help.rs  mod.rs  node_select.rs  notifications.rs  profile.rs  search.rs  topic_detail.rs  topic_list.rs
tests/integration/: api_mock.rs  app_flow.rs  mod.rs
tests/unit/: mod.rs
tests/unit/state/: mod.rs
tests/unit/views/: mod.rs
tmp/: rss.txt
