# V2EX TUI - Terminal UI Viewer
# A terminal-based viewer for V2EX using API 2.0 Beta

[package]
name = "v2ex-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
html2text = "0.12"
unicode-width = "0.2"
webbrowser = "1.0"
fuzzy-matcher = "0.3"
rss = "2.0"
atom_syndication = "0.12"
regex = "1.11"
base64 = "0.22"
ketos = "0.12"
